parte superiore ultimata

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <div>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="suggestiva ruota panoramica">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="paesaggio londinese 1">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="paesaggio londinese 2">
+        </div>
+    </header>
+    <hr>
     
 </body>
 </html>
