prima parte della tabella svolta

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     <hr>
     <main>
         <h2>Le mie spese</h2>
-        
+        <div>
+        <table>
+                <thead>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </thead>
+            </table>
+        </div>
     </main>
 </body>
 </html>
