prima fila di prima tabella ultimata

--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
         <div>
         <table>
                 <thead>
+                    <tr>
                     <th>Numero</th>
                     <th>Descrizione</th>
                     <th>Costo</th>
+                    </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </main>
