inizializzando il fondo della tabella

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
                     <tr>
                         <td>1</td>
                         <td>Biglietto aereo</td>
-                        <td>120</td>
+                        <td>120€</td>
                     </tr>
                     <tr>
                         <td>1</td>
                         <td>Biglietto aereo</td>
-                        <td>120</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    
+                </tfoot>
             </table>
         </div>
     </main>
