--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
                     </tr>
                 </tbody>
                 <tfoot>
-                    
+                    <tr>
+                        <td colspan="2">totale</td>
+                        <td>360€</td>
+                    </tr>
                 </tfoot>
+                
             </table>
         </div>
     </main>
