iniziata seconda sezione del corpo dell'articolo

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                         <td>360€</td>
                     </tr>
                 </tfoot>
-                
             </table>
         </div>
+        <hr>
+        <h3>Cose da fare</h3>
+        
     </main>
 </body>
 </html>
