--- a/index.html
+++ b/index.html
@@ -54,7 +54,20 @@
         </div>
         <hr>
         <h3>Cose da fare</h3>
-        
+        <ul>
+            <li>Visitare la Tower of London</li>
+            <li>Visitare Greenwich</li>
+            <li>Ascoltare un artista di strada a Covent Garden</li>
+            <li>Mangiare il tipico Fish and Chips inglese</li>
+        </ul>
+        <hr>
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili d'emergenza</li>
+            <ul>
+                <li><b>999</b> - emergenza</li>
+            </ul>
+        </ol>
     </main>
 </body>
 </html>
