--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             <li>Numeri utili d'emergenza</li>
             <ul>
                 <li><b>999</b> - emergenza</li>
+                <li><b>101</b> - Numero polizia</li>
+                <li><b>111</b> - Numero assistenza medica</li>
+            </ul>
+            <li>Hotel</li>
+            <ul>
+                <li><b>Nome hotel:</b> Buckingham Palace</li>
+                <li><b>Indirizzo hotel:</b> Westminster, London SW1A 1AA, Regno Unito</li>
             </ul>
         </ol>
     </main>
