ultima parte del corpo centrale ultimata

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                 <li><b>Nome hotel:</b> Buckingham Palace</li>
                 <li><b>Indirizzo hotel:</b> Westminster, London SW1A 1AA, Regno Unito</li>
             </ul>
+            <li>Aereo</li>
+            <ul>
+                <li><b>Volo di Andata:</b> YI234X, ore 9.30 da Milano Malpensa</li>
+                <li><b>Volo di Ritorno:</b> YI236X, ore 18.30 da London Heathrow</li>
+            </ul>
         </ol>
     </main>
 </body>
