--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <h2>Le mie spese</h2>
         <div>
-        <table>
+            <table>
                 <thead>
                     <tr>
                         <th>Numero</th>
@@ -56,7 +56,7 @@
         <h3>Cose da fare</h3>
         <ul>
             <li>Visitare la Tower of London</li>
-            <li>Visitare Greenwich</li>
+            <li>Visitare Greenwich✔</li>
             <li>Ascoltare un artista di strada a Covent Garden</li>
             <li>Mangiare il tipico Fish and Chips inglese</li>
         </ul>
