--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <hr>
         <h3>Cose da fare</h3>
         <ul>
-            <li>Visitare la Tower of London</li>
-            <li>Visitare Greenwich✔</li>
-            <li>Ascoltare un artista di strada a Covent Garden</li>
-            <li>Mangiare il tipico Fish and Chips inglese</li>
+            <li>Visitare la Tower of London ✘</li>
+            <li>Visitare Greenwich ✔</li>
+            <li>Ascoltare un artista di strada a Covent Garden ✔</li>
+            <li>Mangiare il tipico Fish and Chips inglese ✘</li>
         </ul>
         <hr>
         <h3>Info utili:</h3>
